api-gateway-service/target/classes/META-INF/fabric8/openshift/api-gateway-service-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 341f60418839e1f184f058dd473b8717a1f9177a
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=api-gateway-service&var-version=0.0.1-SNAPSHOT
  labels:
    app: api-gateway-service
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: org.groodle.boot
  name: api-gateway-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: api-gateway-service
    provider: fabric8
    group: org.groodle.boot
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 341f60418839e1f184f058dd473b8717a1f9177a
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=api-gateway-service&var-version=0.0.1-SNAPSHOT
      labels:
        app: api-gateway-service
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: org.groodle.boot
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: api-gateway-service:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: api-gateway-service:latest
    type: ImageChange
