api-gateway-service/target/classes/META-INF/fabric8/openshift/api-gateway-service-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: api-gateway-service
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: org.groodle.boot
  name: api-gateway-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: api-gateway-service
